--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ mainServer/config/__pycache__/*
 mainServer/app/migrations/__pycache__/*
 mainServer/app/__pycache__/*
 mainServer/app/templatetags/__pycache__/*
+ApiServer/app/__pycache__/*
+ApiServer/app/migrations/__pycache__/*
+ApiServer/config/__pycache__/*
